# FETT---SFUmon

./: CMakeLists.txt  LICENSE  README.md  arm64_toolchain.cmake
app/: CMakeLists.txt
app/include/: catch.h  collision.h  common.h  dialogue.h  game.h  game_state.h  input.h  map.h  music.h  npc.h  player.h  quest.h  rendering.h  rendering_ui.h  sound_effects.h
app/src/: catch.c  collision.c  dialogue.c  game.c  game_state.c  input.c  main.c  map.c  music.c  npc.c  player.c  quest.c  rendering.c  rendering_ui.c
build_host/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_host/app/: Makefile  cmake_install.cmake  sfumon
build_host/hal/: Makefile  cmake_install.cmake
hal/: CMakeLists.txt
hal/include/hal/: audio.h  button.h  display.h  joystick.h  storage.h
hal/src/: audio.c  button.c  display.c  joystick.c  sprite.c  storage.c
sfumon/: CMakeLists.txt
sfumon/app/: CMakeLists.txt
sfumon/app/include/: collision.h  common.h  game.h  rendering.h
sfumon/app/src/: game.c  input.c  main.c  map.c  npc.c  player.c
sfumon/hal/: CMakeLists.txt
sfumon/hal/include/hal/: soundfx.h  sprite.h
sfumon/hal/src/: audio.c  display.c  sprite.c  storage.c
